Fix gaps between answers

--- a/public/css/survey.less
+++ b/public/css/survey.less
@@ -17,3 +17,7 @@ input[type="radio"]:checked + label:after {
   height:     2px;
   background: @main-white;
 }
+
+form p {
+  padding-left: 30px;
+}
